# kalmanpy

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/kalmanpy/: __init__.py
