[project]
name = "kalmanpy"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "onion" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.7",
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kalmanpy"]
